--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,10 @@
-<h1>Welcome to Fwitter</h1>
+<h1>Welcome to Collector</h1>
 
-<h3>Log In Please</h3>
+<h3>Log In/Sign Up</h3>
 <form method="post" action="/login">
-  <input type="text" name="username" placeholder="Username">
+  <input type="text" name="name" placeholder="Username">
   <input type="password" name="password" placeholder="password">
   <input type="submit" name="submit" id="submit">
 </form>
+
+<a href='/signup'>Sign Up</a>
