--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,6 +4,10 @@
     <title>Collector</title>
   </head>
   <body>
+  	<% unless locals.empty? %>
+	  <%= message %>
+	<% end %>
+	
     <%= yield %>
   </body>
 
