--- a/app/views/collections/new.erb
+++ b/app/views/collections/new.erb
@@ -1,9 +1,12 @@
-<h1>Create that sweet, sweet tweet</h1>
+<h1>Create a collection</h1>
 
-<form action='/tweets' method="POST">
-  <label>tweet</label>
+<form action='/collections' method="POST">
+  <label>Name</label>
   <br><br/>
-  <input type="text" name="content"> 
-
+  <input type="text" name="name"> 
+  <br></br>
+  <label>Description</label>
+  <br><br/>
+  <input type="text" name="description"> 
   <input type="submit" value="submit">
 </form> 
