--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,8 @@
 <h3>Log In Please</h3>
 <form method="post" action="/login">
-  <input type="text" name="username" placeholder="Username">
+  <input type="text" name="name" placeholder="Username">
   <input type="password" name="password" placeholder="password">
   <input type="submit" name="submit" id="submit">
 </form>
+
+<a href='/signup'>Sign Up</a>
