--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -3,7 +3,7 @@
 <form action='/signup' method="POST">
   <label>name</label>
   <br/>
-  <input type="text" name="username"> 
+  <input type="text" name="name"> 
   <label>email</label>
   <br/>
   <input type="text" name="email">
