--- a/app/views/collections/show.erb
+++ b/app/views/collections/show.erb
@@ -1,13 +1,25 @@
+
+
 <h1><%=@collection.name%></h1>
-<h2><%=@collection.description%></</h2>
+<h2><%=@collection.description%></h2>
+<br>
+
 
 <% @collection.items.each do |item| %>
-	<h3><%=item.name%></h3><a href="/items/<%=item.slug%>">Link</a>
+	<img src="https://archive.org/download/mma_cameo_16677/16677.jpg" alt="Place holder for when I figure out how to picture." style="width:128px;height:128px;">
+	<a href="/items/<%=item.slug%>"><%=item.name%></a>
+	<p><%=item.description%></p>
+	<button>Dummy Toggle</button>
+	<br>
 <% end %>
-
+<br></br>
 <form action="/collections/<%=@collection.slug%>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input value="Delete Tweet" type="submit">
+  <input value="Delete Collection" type="submit">
 </form>
 
-<a href='/tweets/<%=@collection.slug%>/edit'>Edit Collection</a>
+<a href='/items/new'>Add Item</a>
+<br>
+<a href='/collections/<%=@collection.slug%>/edit'>Edit Collection</a>
+<br>
+<a href='/collections/new'>New Collection</a>
