--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,3 +1,5 @@
+
+
 <h3>Log In Please</h3>
 <form method="post" action="/login">
   <input type="text" name="name" placeholder="Username">
@@ -5,4 +7,4 @@
   <input type="submit" name="submit" id="submit">
 </form>
 
-<a href='/signup'>Sign Up</a>
+Not a member?<a href='/signup'>Sign Up</a>
