--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,5 @@
+
+
 <h1>Welcome to Collector</h1>
 
 <h3>Log In/Sign Up</h3>
@@ -6,5 +8,5 @@
   <input type="password" name="password" placeholder="password">
   <input type="submit" name="submit" id="submit">
 </form>
-
-<a href='/signup'>Sign Up</a>
+<br>
+Not a member? <a href='/signup'>Sign Up</a>
