--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,15 +1,17 @@
-<h1>sign up below:</h1> 
+<h1>Sign up below:</h1> 
 
 <form action='/signup' method="POST">
   <label>name</label>
-  <br/>
+  <br>
   <input type="text" name="name"> 
+  <br></br>
   <label>email</label>
-  <br/>
+  <br>
   <input type="text" name="email">
-  <br/>
+  <br></br>
   <label>password</label>
-  <br/>
+  <br>
   <input type="password" name="password">
+  <br></br>
   <input type="submit" value="Sign Up">
 </form> 
