--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -1,4 +1,4 @@
-<h1>Create a collection</h1>
+<h1>Create an item</h1>
 
 <form action='/items' method="POST" enctype="multipart/form-data">
   <label>Name</label>
