--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -1,4 +1,4 @@
-<h1>Edit the item</h1>
+<h1>Edit item</h1>
 
 <form action='/items/<%=@item.slug%>' method="POST">
   <input type="hidden" name="_method" value="patch">
